Bullismo/log.txt
2026-01-25 15:28:02 UTC
Linux-6.18.5-arch1-1-x86_64-with-glibc2.42
Ren'Py 8.5.2.26010301

Early init took 33 ms
Loading error handling took 25 ms
Loading script took 500 ms
Loading save slot metadata took 13 ms
Loading persistent took 0 ms
Running init code took 23 ms
Loading analysis data took 5 ms
Analyze and compile ATL took 1 ms
Reloading save slot metadata took 2 ms
Dump and make backups took 0 ms
Cleaning cache took 0 ms
Making clean stores took 0 ms
Initial gc took 24 ms
DPI scale factor: 1.000000
Creating interface object took 0 ms
Init translation took 0 ms
Cleaning stores took 0 ms
Load screen analysis took 13 ms
Analyze screens took 1 ms
Save screen analysis took 0 ms
Save pyanalysis took 0 ms
Save bytecode took 15 ms
Running _start took 1 ms
Interface start took 316 ms

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'NVIDIA Corporation'
Renderer: 'NVIDIA GeForce RTX 3060/PCIe/SSE2'
Version: '4.6.0 NVIDIA 590.48.01'
Display Info: <Info({'bitsize': 32, 'bytesize': 4, 'masks': (16711680, 65280, 255, 0), 'shifts': (16, 8, 0, 0), 'losses': (0, 0, 0, 8), 'current_w': 1920, 'current_h': 1080, 'refresh_rate': 165, 'hw': False, 'wm': True, 'video_mem': 268435456, 'blit_hw': False, 'blit_hw_CC': False, 'blit_hw_A': False, 'blit_sw': False, 'blit_sw_CC': False, 'blit_sw_A': False})>
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
INFO:renpy_warp_service:service thread started. periodically scanning ports for warp server
INFO:renpy_warp_service:connected to renpy warp socket server on :40111

Full traceback:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1305, in py_eval
    return py_eval_bytecode(code, globals, locals)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1298, in py_eval_bytecode
    return eval(bytecode, globals, locals)
           ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script.rpy", line 354, in <module>
    if !vinto:
NameError: name 'perso' is not defined

While running game code:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "game/script.rpy", line 354, in <module>
    if !vinto:
NameError: name 'perso' is not defined

Full traceback:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1305, in py_eval
    return py_eval_bytecode(code, globals, locals)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "renpy/python.py", line 1298, in py_eval_bytecode
    return eval(bytecode, globals, locals)
           ~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script.rpy", line 354, in <module>
    if !vinto:
NameError: name 'perso' is not defined

While running game code:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "game/script.rpy", line 354, in <module>
    if !vinto:
NameError: name 'perso' is not defined
INFO:renpy_warp_service:closing websocket connection :40111
INFO:renpy_warp_service:connection replaced, service exiting
INFO:renpy_warp_service:service closed
Resetting cache.
Early init took 4 ms
Loading error handling took 11 ms
Loading script took 75 ms
Loading save slot metadata took 6 ms
Loading persistent took 0 ms
Running init code took 18 ms
Loading analysis data took 6 ms
Analyze and compile ATL took 1 ms
Reloading save slot metadata took 2 ms
Backing up script files to '/home/nano_machine/.renpy/backups/Bullismo':
Dump and make backups took 0 ms
Cleaning cache took 0 ms
Making clean stores took 0 ms
Initial gc took 33 ms
DPI scale factor: 1.000000
Creating interface object took 0 ms
Init translation took 0 ms
Cleaning stores took 0 ms
Load screen analysis took 0 ms
Analyze screens took 6 ms
Save screen analysis took 7 ms
Save pyanalysis took 0 ms
Save bytecode took 0 ms
Running _start took 1 ms
Interface start took 131 ms

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'NVIDIA Corporation'
Renderer: 'NVIDIA GeForce RTX 3060/PCIe/SSE2'
Version: '4.6.0 NVIDIA 590.48.01'
Display Info: <Info({'bitsize': 32, 'bytesize': 4, 'masks': (16711680, 65280, 255, 0), 'shifts': (16, 8, 0, 0), 'losses': (0, 0, 0, 8), 'current_w': 1920, 'current_h': 1080, 'refresh_rate': 165, 'hw': False, 'wm': True, 'video_mem': 268435456, 'blit_hw': False, 'blit_hw_CC': False, 'blit_hw_A': False, 'blit_sw': False, 'blit_sw_CC': False, 'blit_sw_A': False})>
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
INFO:renpy_warp_service:service thread started. periodically scanning ports for warp server
INFO:renpy_warp_service:connected to renpy warp socket server on :40111

Full traceback:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "renpy/ast.py", line 2079, in execute
    if renpy.python.py_eval(condition):
       ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^ 
  File "renpy/python.py", line 1303, in py_eval
    code = py_compile(code, "eval")
           ~~~~~~~~~~^^^^^^^^^^^^^^
  File "renpy/python.py", line 1260, in py_compile
    raise e
  File "renpy/python.py", line 1190, in py_compile
    tree = compile(source, filename, py_mode, ast.PyCF_ONLY_AST | flags, True)
           ~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "game/script.rpy", line 354
    !vinto
    ^^^^^^
SyntaxError: invalid syntax

While running game code:
  File "game/script.rpy", line 354, in script
    if !vinto:
  File "game/script.rpy", line 354
    !vinto
    ^^^^^^
SyntaxError: invalid syntax
INFO:renpy_warp_service:closing websocket connection :40111
INFO:renpy_warp_service:connection replaced, service exiting
INFO:renpy_warp_service:service closed
Resetting cache.
Early init took 4 ms
Loading error handling took 6 ms
Loading script took 54 ms
Loading save slot metadata took 6 ms
Loading persistent took 0 ms
Running init code took 18 ms
Loading analysis data took 3 ms
Analyze and compile ATL took 1 ms
Reloading save slot metadata took 2 ms
Backing up script files to '/home/nano_machine/.renpy/backups/Bullismo':
Dump and make backups took 0 ms
Cleaning cache took 0 ms
Making clean stores took 0 ms
Initial gc took 35 ms
DPI scale factor: 1.000000
Creating interface object took 0 ms
Init translation took 0 ms
Cleaning stores took 0 ms
Load screen analysis took 0 ms
Analyze screens took 9 ms
Save screen analysis took 10 ms
Save pyanalysis took 0 ms
Save bytecode took 0 ms
Running _start took 1 ms
Interface start took 155 ms

Initializing gl2 renderer:
primary display bounds: (0, 0, 1920, 1080)
swap interval: 1 frames
Windowed mode.
Vendor: 'NVIDIA Corporation'
Renderer: 'NVIDIA GeForce RTX 3060/PCIe/SSE2'
Version: '4.6.0 NVIDIA 590.48.01'
Display Info: <Info({'bitsize': 32, 'bytesize': 4, 'masks': (16711680, 65280, 255, 0), 'shifts': (16, 8, 0, 0), 'losses': (0, 0, 0, 8), 'current_w': 1920, 'current_h': 1080, 'refresh_rate': 165, 'hw': False, 'wm': True, 'video_mem': 268435456, 'blit_hw': False, 'blit_hw_CC': False, 'blit_hw_A': False, 'blit_sw': False, 'blit_sw_CC': False, 'blit_sw_A': False})>
Screen sizes: virtual=(1920, 1080) physical=(1739, 978) drawable=(1739, 978)
Maximum texture size: 4096x4096
INFO:renpy_warp_service:service thread started. periodically scanning ports for warp server
INFO:renpy_warp_service:connected to renpy warp socket server on :40111
Cleaning stores took 0 ms
Load screen analysis took 14 ms
Analyze screens took 0 ms
Running _start took 2 ms
Cleaning stores took 0 ms
Load screen analysis took 11 ms
Analyze screens took 0 ms
Running _start took 2 ms
Cleaning stores took 0 ms
Load screen analysis took 10 ms
Analyze screens took 0 ms
Running _start took 1 ms
INFO:renpy_warp_service:closing websocket connection :40111
INFO:renpy_warp_service:connection replaced, service exiting
INFO:renpy_warp_service:service closed
